fixed z-indexing

--- a/css/feed.css
+++ b/css/feed.css
@@ -20,7 +20,6 @@
 .feed-item-contents {
   display: block;
   padding : 10px;
-    position: relative;
   margin-top : 5px;
 }
 
